--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </svg>
     </h1>
     <h2 class="subtitle">
-      50% de desconto nas horas <br> da equipe de seniors.
+      50% de desconto nas horas <br class="dnone"> da equipe de seniors.
     </h2>
     <a href="contato.html" title="Eu quero o desconto">
       <button class="nyx-button">EU QUERO</button>
@@ -217,8 +217,11 @@
   <link rel="stylesheet" href="assets/styles/app.css">
   <style type="text/css">
     @media screen and (max-width: 600px) {
+      .dnone { display: none; }
       .header {
-        justify-content: center;         
+        justify-content: center;
+        margin-top: 40px;         
+        margin-bottom: 0;         
       }
       [class^="home-shape"] {
         transform: scale(.6,.6);
@@ -226,7 +229,10 @@
       .neon-title > svg {
         margin-left: -15px;
       }
-      .footer { text-align: center; }
+      .footer {
+        margin-top: 50px;
+        text-align: center;
+      }
       .footer-partners {
         margin-left: 0;
       }
