--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     </ul>
   </footer>
   <link rel="stylesheet" href="assets/styles/app.css">
-  <style type="text/css">
+  <style type="text/css" scoped>
     @media screen and (max-width: 600px) {
       .dnone { display: none; }
       .header {
