--- a/contato.html
+++ b/contato.html
@@ -95,7 +95,8 @@
     <h1 class="main-title">
       Conte um pouco sobre seu projeto e entramos em contato com você o mais rápido.
     </h1>
-    <form name="contact-form" class="contact-form" action="">
+    <form name="contact-form" class="contact-form" method="POST" enctype="multipart/form-data" action="https://smartforms.dev/submit/5dc78faaed25000605199aac">
+      <input type="hidden" name="_language" value="pt-BR" />
       <label class="nyx-field" for="name">
         <span class="nyx-field__text">Seu nome</span>
         <input id="name" type="text" name="name" class="nyx-field__input" placeholder="Jonh Rich" required>
@@ -120,7 +121,7 @@
       <label class="nyx-field" for="attachment">
         <span class="nyx-field__text nyx-field__text--half">Anexos - Arquivos para avaliação:</span>
         <div class="nyx-field-file">
-          <input id="attachment" class="nyx-field-file__input" type="file" name="attachment" required>
+          <input id="attachment" class="nyx-field-file__input" type="file" name="file">
           <button type="button" class="contact-form__attachment nyx-button nyx-button--outline">
             <svg class="nyx-button--left-icon" xmlns="http://www.w3.org/2000/svg" width="10.085" height="24.325" viewBox="0 0 10.085 24.325">
               <path d="M142.3,24.325a4.056,4.056,0,0,0,3.782-4.276V5.7c0-3.144-2.262-5.7-5.042-5.7S136,2.558,136,5.7V20.049h1.261V5.7a3.81,3.81,0,1,1,7.564,0V20.049a2.54,2.54,0,1,1-5.042,0V8.552a1.27,1.27,0,1,1,2.521,0v11.5h1.261V8.552a2.54,2.54,0,1,0-5.042,0v11.5A4.056,4.056,0,0,0,142.3,24.325Z" transform="translate(146.085 24.325) rotate(180)" fill="#aea633"/>
