Add custom in field file

--- a/contato.html
+++ b/contato.html
@@ -117,8 +117,8 @@
         <span class="nyx-field__subtext nyx-field__subtext--blue">(Links, caso tenha arquivos grandes enviar o link)</span>
         <textarea id="description" name="description" class="nyx-field__textarea" rows="7" required></textarea>
       </label>
-      <label class="nyx-field" for="attachment">
-        <div class="nyx-field__text attachment-text nyx-field__text--half">
+      <label class="nyx-field attachment-field" for="attachment">
+        <div class="nyx-field__text nyx-field__text--half">
           <span class="amount"></span>
           <span class="text">Arquivo para avaliação:</span>
         </div>
