Add first rules.

--- a/regras.html
+++ b/regras.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="assets/styles/default.css">
+    <link rel="stylesheet" href="assets/styles/app.css">
 </head>
 
 <body>
@@ -29,7 +30,7 @@
 </header>
 <main class="main">
     <h1 class="neon-title">
-        <svg viewBox="0 0 640 330">
+        <svg viewBox="0 0 1280 330">
             <text class="neon-title__text" x="30" y="110">BLACK</text>
             <text class="neon-title__text" x="30" y="200">NOVEMBER</text>
             <text class="neon-title__text" x="30" y="290">NYX</text>
@@ -38,5 +39,72 @@
             </foreignobject>
         </svg>
     </h1>
+    <h2 class="subtitle">
+        Regras
+    </h2>
+    <div>
+        <ul>
+            <li>
+                Serão limitadas a 200 hrs com desconto distribuidos da seguinte forma:
+                <ul>
+                    <li>50 hrs com 50% de desconto</li>
+                    <li>50 hrs com 35% de desconto</li>
+                    <li>50 hrs com 25% de desconto</li>
+                    <li>50 hrs com 15% de desconto</li>
+                </ul>
+            </li>
+            <li>
+                O valor do desconto já inclui impostos.
+            </li>
+            <li>
+                Descontos válidos somente para novos clientes ou clientes com mais de 2 meses inativos.
+            </li>
+            <li>
+                Qualquer cliente poderá contratar quantas horas desejar.
+            </li>
+            <li>
+                Horas ficarão disponíveis para vendas até esgotarem ou até o dia 15 de dez.
+            </li>
+            <li>
+                Terão preferência o cliente que primeiro formalizar o interesse por email e fazer o pagamento em no máximo
+                10 dias corridos após a formalização tendo o limite máximo até 29/11/2019 (Black Friday).
+            </li>
+            <li>
+                O não pagamento, por qualquer motivo, perderá a preferência e o desconto será transferido para o próximo
+                interessado.
+            </li>
+            <li>
+                As horas serão feitas pelo time da Nyx entre dez/2019 e jan/2019, podendo ser antecipado se o pagamento
+                ocorrer antes do dia 29/11 ou prolongado em acordo com ambas as partes.
+            </li>
+            <li>
+                Se o cliente não ficar insatisfeito com o trabalho após 7 dias de início do projeto, o valor será devolvido
+                integralmente. Entre em contato para saber mais sobre as regras de devolução.
+            </li>
+            <li>
+                Clientes ativos (últimos 2 meses) terão um desconto personalizado.
+            </li>
+        </ul>
+    </div>
+
+    <h2 class="subtitle">
+        Preços do Time (Sem desconto) - Cliente Brasil com IMPOSTOS INCLUSOS
+    </h2>
+    <div>
+        <ul>
+            <li>
+                Desenvolvimento de sistemas sem suporte - R$ 135/hr
+            </li>
+            <li>
+                Desenvolvimento de sistemas com serviço de suporte - R$ 120/hr
+            </li>
+            <li>
+                Consultoria e horas extras (emergências) - R$ 195/hr
+            </li>
+            <li>
+                Outros valores e atividades de TI entre em contato.
+            </li>
+        </ul>
+    </div>
 </main>
 </body>
