Add link to github site.

--- a/regras.html
+++ b/regras.html
@@ -84,6 +84,10 @@
             <li>
                 Clientes ativos (últimos 2 meses) terão um desconto personalizado.
             </li>
+            <li>
+                Essas regras podem sofrer alterações, todo o historico de alterações estarão disponíveis aqui:
+                https://github.com/nyxtechnology/site/tree/gh-pages
+            </li>
         </ul>
     </div>
 
