Update type tel in contact page

--- a/contato.html
+++ b/contato.html
@@ -106,7 +106,7 @@
       </label>
       <label class="nyx-field" for="phone">
         <div class="nyx-field__text" >Telefone</div>        
-        <input id="phone" type="phone" name="phone" class="nyx-field__input" placeholder="+55 (81) 98335-3569" required>
+        <input id="phone" type="tel" name="phone" class="nyx-field__input" placeholder="+55 (81) 98335-3569" required>
       </label>
       <label class="nyx-field" for="project">
         <span class="nyx-field__text">Nome do seu projeto</span>
