Format rules styles.

--- a/regras.html
+++ b/regras.html
@@ -45,7 +45,7 @@
     <div>
         <ul>
             <li>
-                Serão limitadas a 200 hrs com desconto distribuidos da seguinte forma:
+                Serão limitadas a 200 hrs com desconto distribuídos da seguinte forma:
                 <ul>
                     <li>50 hrs com 50% de desconto</li>
                     <li>50 hrs com 35% de desconto</li>
@@ -66,7 +66,7 @@
                 Horas ficarão disponíveis para vendas até esgotarem ou até o dia 15 de dez.
             </li>
             <li>
-                Terão preferência o cliente que primeiro formalizar o interesse por email e fazer o pagamento em no máximo
+                Terão preferência os clientes que primeiro formalizar o interesse por email e fazer o pagamento em no máximo
                 10 dias corridos após a formalização tendo o limite máximo até 29/11/2019 (Black Friday).
             </li>
             <li>
@@ -74,23 +74,24 @@
                 interessado.
             </li>
             <li>
-                As horas serão feitas pelo time da Nyx entre dez/2019 e jan/2019, podendo ser antecipado se o pagamento
+                As horas serão feitas pelo time da Nyx entre dez/2019 e jan/2020, podendo ser antecipado se o pagamento
                 ocorrer antes do dia 29/11 ou prolongado em acordo com ambas as partes.
             </li>
             <li>
-                Se o cliente não ficar insatisfeito com o trabalho após 7 dias de início do projeto, o valor será devolvido
-                integralmente. Entre em contato para saber mais sobre as regras de devolução.
+                Se o cliente ficar insatisfeito com o trabalho após 7 dias de início do projeto, o valor será devolvido
+                integralmente. Entre em <a href="contato.html"> contato </a>para saber mais sobre as regras de devolução.
             </li>
             <li>
                 Clientes ativos (últimos 2 meses) terão um desconto personalizado.
             </li>
             <li>
-                Essas regras podem sofrer alterações, todo o historico de alterações estarão disponíveis aqui:
-                https://github.com/nyxtechnology/site/tree/gh-pages
+                Essas regras podem sofrer alterações, todo o histórico de alterações estarão disponíveis en nosso
+                <a href="https://github.com/nyxtechnology/site/tree/gh-pages" target="_blank">GitHub</a>
             </li>
         </ul>
     </div>
-
+    <br>
+    <br>
     <h2 class="subtitle">
         Preços do Time (Sem desconto) - Cliente Brasil com IMPOSTOS INCLUSOS
     </h2>
@@ -111,4 +112,8 @@
         </ul>
     </div>
 </main>
+    <BR>
+   Black November Nyx - 2019
+<BR>
+<BR>
 </body>
