Fix portuguese texts.

--- a/contato.html
+++ b/contato.html
@@ -133,9 +133,10 @@
         </div>
       </label>
       <label class="nyx-field" for="schedule">
-        <span class="nyx-field__text">Melhores dias e horarios para uma call</span>
+        <span class="nyx-field__text">Melhores dias e horários para uma call</span>
         <textarea id="schedule" name="schedule" class="nyx-field__textarea" rows="7" required></textarea>
       </label>
+      <a href="regras.html">Conheça as regras aqui.</a>
       <button class="nyx-button" type="submit">
         <span class="nyx-button--text">ENVIAR</span>
         <svg class="nyx-button--right-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 21 18">
