--- a/regras.html
+++ b/regras.html
@@ -107,7 +107,7 @@
                 Consultoria e horas extras (emergências) - R$ 195/hr
             </li>
             <li>
-                Outros valores e atividades de TI entre em contato.
+                Outros valores e atividades de TI entre em <a href="contato.html"> contato </a>.
             </li>
         </ul>
     </div>
