Add new links to rules and contact.

--- a/regras.html
+++ b/regras.html
@@ -98,13 +98,13 @@
     <div>
         <ul>
             <li>
-                Desenvolvimento de sistemas sem suporte - R$ 135/hr
+                Desenvolvimento de sistemas SEM suporte - <span class="destaque"> R$ 135/hr </span>
             </li>
             <li>
-                Desenvolvimento de sistemas com serviço de suporte - R$ 120/hr
+                Desenvolvimento de sistemas COM serviço de suporte - <span class="destaque">R$ 120/hr</span>
             </li>
             <li>
-                Consultoria e horas extras (emergências) - R$ 195/hr
+                Consultoria e horas extras (emergências) - <span class="destaque"> R$ 195/hr</span>
             </li>
             <li>
                 Outros valores e atividades de TI entre em <a href="contato.html"> contato </a>.
@@ -113,7 +113,7 @@
     </div>
 </main>
     <BR>
-   Black November Nyx - 2019
+   Black November Nyx - 2019 <BR><a href="mailto:edmar.gomes@nyx.tc" type="email">edmar.gomes@nyx.tc</a>
 <BR>
 <BR>
 </body>
