--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">  
   <style type="text/css">
+    a {
+      color: #5df4ff;
+    }
     .header {
       position: relative;
       width: 100%;
@@ -78,6 +81,9 @@
       right: -30%;
       top: 70%;
     }
+    .contact-form > .nyx-field[for="schedule"] {
+      margin-bottom: 20px;
+    }
   </style>
 </head>
 
@@ -92,7 +98,7 @@
   </header>
   <main class="main">
     <h1 class="main-title">
-      Conte um pouco sobre seu projeto e entramos em contato com você o mais rápido.
+      Conte um pouco sobre seu projeto e entraremos em contato.
     </h1>
     <form name="contact-form" class="contact-form" method="POST" enctype="multipart/form-data" action="https://smartforms.dev/submit/5dc8ba32ed25000605199af8">
       <input type="hidden" name="_language" value="pt-BR" />
@@ -136,7 +142,6 @@
         <span class="nyx-field__text">Melhores dias e horários para uma call</span>
         <textarea id="schedule" name="schedule" class="nyx-field__textarea" rows="7" required></textarea>
       </label>
-      <a href="regras.html">Conheça as regras aqui.</a>
       <button class="nyx-button" type="submit">
         <span class="nyx-button--text">ENVIAR</span>
         <svg class="nyx-button--right-icon" xmlns="http://www.w3.org/2000/svg" width="21" height="18" viewBox="0 0 21 18">
@@ -147,7 +152,10 @@
           </g>
         </svg>
       </button>
+      <BR>
+      <a href="regras.html">Conheça as regras aqui.</a>
     </form>
+
 
     <div class="contact-shape-4 shape-square">
       <span class="shape-square-1"></span>
