Update call to action text.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </svg>
     </h1>
     <h2 class="subtitle">
-      50% de desconto nas horas <br class="dnone"> da equipe de seniors.
+      Até 50% de desconto nas horas <br class="dnone"> da equipe de sêniors.
     </h2>
     <a href="contato.html" title="Eu quero o desconto">
       <button class="nyx-button">EU QUERO</button>
