--- a/regras.html
+++ b/regras.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="assets/styles/default.css">
     <link rel="stylesheet" href="assets/styles/app.css">
+    <link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
 <body>
