Update style files

--- a/regras.html
+++ b/regras.html
@@ -2,119 +2,115 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Black November - Nyx Technology</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-    <link rel="stylesheet" href="assets/styles/default.css">
-    <link rel="stylesheet" href="assets/styles/app.css">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Regras Black November - Nyx Technology</title>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+  <link rel="stylesheet" href="assets/styles/app.css">
+  <link rel="stylesheet" href="assets/styles/default.css">
+  <link rel="shortcut icon" href="images/favicon.ico" />
 </head>
 
 <body>
-<header class="header">
-    <svg
-            class="home-shape-1 shape-wavy"
-            xmlns="http://www.w3.org/2000/svg"
-            width="77.716"
-            height="98.621"
-            viewBox="0 0 77.716 98.621">
-        <path d="M1123.287,540c0,16.429-31.547,18.361,0,38.139s0,27.322,0,43.534" transform="matrix(0.875, -0.485, 0.485, 0.875, -1225.186, 85.88)" />
+  <header class="header">
+    <svg class="home-shape-1 shape-wavy" xmlns="http://www.w3.org/2000/svg" width="77.716" height="98.621" viewBox="0 0 77.716 98.621">
+      <path d="M1123.287,540c0,16.429-31.547,18.361,0,38.139s0,27.322,0,43.534"
+        transform="matrix(0.875, -0.485, 0.485, 0.875, -1225.186, 85.88)" />
     </svg>
     <div class="home-shape-2 shape-circle shape-circle--blue"></div>
     <a href="/" title="Home" class="logo">
-        <img src="./assets/images/logo_nyx_technology.png"
-             alt="logo branca com as letras N Y X e o complemento com o texto technology">
+      <img src="./assets/images/logo_nyx_technology.png"
+        alt="logo branca com as letras N Y X e o complemento com o texto technology">
     </a>
-</header>
-<main class="main">
+  </header>
+  <main class="main">
     <h1 class="neon-title">
-        <svg viewBox="0 0 1280 330">
-            <text class="neon-title__text" x="30" y="110">BLACK</text>
-            <text class="neon-title__text" x="30" y="200">NOVEMBER</text>
-            <text class="neon-title__text" x="30" y="290">NYX</text>
-            <foreignobject x="280" y="215" width="53%" height="80px">
-                <div class="neon-title__pattern circles-pattern"></div>
-            </foreignobject>
-        </svg>
+      <svg viewBox="0 0 1280 330">
+        <text class="neon-title__text" x="30" y="110">BLACK</text>
+        <text class="neon-title__text" x="30" y="200">NOVEMBER</text>
+        <text class="neon-title__text" x="30" y="290">NYX</text>
+        <foreignobject x="280" y="215" width="53%" height="80px">
+          <div class="neon-title__pattern circles-pattern"></div>
+        </foreignobject>
+      </svg>
     </h1>
     <h2 class="subtitle">
-        Regras
+      Regras
     </h2>
     <div>
-        <ul>
-            <li>
-                Serão limitadas a 200 hrs com desconto distribuídos da seguinte forma:
-                <ul>
-                    <li>50 hrs com 50% de desconto</li>
-                    <li>50 hrs com 35% de desconto</li>
-                    <li>50 hrs com 25% de desconto</li>
-                    <li>50 hrs com 15% de desconto</li>
-                </ul>
-            </li>
-            <li>
-                O valor do desconto já inclui impostos.
-            </li>
-            <li>
-                Descontos válidos somente para novos clientes ou clientes com mais de 2 meses inativos.
-            </li>
-            <li>
-                Qualquer cliente poderá contratar quantas horas desejar.
-            </li>
-            <li>
-                Horas ficarão disponíveis para vendas até esgotarem ou até o dia 15 de dez.
-            </li>
-            <li>
-                Terão preferência os clientes que primeiro formalizar o interesse por email e fazer o pagamento em no máximo
-                10 dias corridos após a formalização tendo o limite máximo até 29/11/2019 (Black Friday).
-            </li>
-            <li>
-                O não pagamento, por qualquer motivo, perderá a preferência e o desconto será transferido para o próximo
-                interessado.
-            </li>
-            <li>
-                As horas serão feitas pelo time da Nyx entre dez/2019 e jan/2020, podendo ser antecipado se o pagamento
-                ocorrer antes do dia 29/11 ou prolongado em acordo com ambas as partes.
-            </li>
-            <li>
-                Se o cliente ficar insatisfeito com o trabalho após 7 dias de início do projeto, o valor será devolvido
-                integralmente. Entre em <a href="contato.html"> contato </a>para saber mais sobre as regras de devolução.
-            </li>
-            <li>
-                Clientes ativos (últimos 2 meses) terão um desconto personalizado.
-            </li>
-            <li>
-                Essas regras podem sofrer alterações, todo o histórico de alterações estarão disponíveis en nosso
-                <a href="https://github.com/nyxtechnology/site/tree/gh-pages" target="_blank">GitHub</a>
-            </li>
-        </ul>
+      <ul>
+        <li>
+          Serão limitadas a 200 hrs com desconto distribuídos da seguinte forma:
+          <ul>
+            <li>50 hrs com 50% de desconto</li>
+            <li>50 hrs com 35% de desconto</li>
+            <li>50 hrs com 25% de desconto</li>
+            <li>50 hrs com 15% de desconto</li>
+          </ul>
+        </li>
+        <li>
+          O valor do desconto já inclui impostos.
+        </li>
+        <li>
+          Descontos válidos somente para novos clientes ou clientes com mais de 2 meses inativos.
+        </li>
+        <li>
+          Qualquer cliente poderá contratar quantas horas desejar.
+        </li>
+        <li>
+          Horas ficarão disponíveis para vendas até esgotarem ou até o dia 15 de dez.
+        </li>
+        <li>
+          Terão preferência os clientes que primeiro formalizar o interesse por email e fazer o pagamento em no máximo
+          10 dias corridos após a formalização tendo o limite máximo até 29/11/2019 (Black Friday).
+        </li>
+        <li>
+          O não pagamento, por qualquer motivo, perderá a preferência e o desconto será transferido para o próximo
+          interessado.
+        </li>
+        <li>
+          As horas serão feitas pelo time da Nyx entre dez/2019 e jan/2020, podendo ser antecipado se o pagamento
+          ocorrer antes do dia 29/11 ou prolongado em acordo com ambas as partes.
+        </li>
+        <li>
+          Se o cliente ficar insatisfeito com o trabalho após 7 dias de início do projeto, o valor será devolvido
+          integralmente. Entre em <a href="contato.html"> contato </a>para saber mais sobre as regras de devolução.
+        </li>
+        <li>
+          Clientes ativos (últimos 2 meses) terão um desconto personalizado.
+        </li>
+        <li>
+          Essas regras podem sofrer alterações, todo o histórico de alterações estarão disponíveis en nosso
+          <a href="https://github.com/nyxtechnology/site/tree/gh-pages" target="_blank">GitHub</a>
+        </li>
+      </ul>
     </div>
     <br>
     <br>
     <h2 class="subtitle">
-        Preços do Time (Sem desconto) - Cliente Brasil com IMPOSTOS INCLUSOS
+      Preços do Time (Sem desconto) - Cliente Brasil com IMPOSTOS INCLUSOS
     </h2>
     <div>
-        <ul>
-            <li>
-                Desenvolvimento de sistemas SEM suporte - <span class="destaque"> R$ 135/hr </span>
-            </li>
-            <li>
-                Desenvolvimento de sistemas COM serviço de suporte - <span class="destaque">R$ 120/hr</span>
-            </li>
-            <li>
-                Consultoria e horas extras (emergências) - <span class="destaque"> R$ 195/hr</span>
-            </li>
-            <li>
-                Outros valores e atividades de TI entre em <a href="contato.html"> contato </a>.
-            </li>
-        </ul>
+      <ul>
+        <li>
+          Desenvolvimento de sistemas SEM suporte - <span class="destaque"> R$ 135/hr </span>
+        </li>
+        <li>
+          Desenvolvimento de sistemas COM serviço de suporte - <span class="destaque">R$ 120/hr</span>
+        </li>
+        <li>
+          Consultoria e horas extras (emergências) - <span class="destaque"> R$ 195/hr</span>
+        </li>
+        <li>
+          Outros valores e atividades de TI entre em <a href="contato.html"> contato </a>.
+        </li>
+      </ul>
     </div>
-</main>
-    <BR>
-   Black November Nyx - 2019 <BR><a href="mailto:edmar.gomes@nyx.tc" type="email">edmar.gomes@nyx.tc</a>
-<BR>
-<BR>
+  </main>
+  <BR>
+  Black November Nyx - 2019 <BR><a href="mailto:edmar.gomes@nyx.tc" type="email">edmar.gomes@nyx.tc</a>
+  <BR>
+  <BR>
 </body>
