Add Taller logo

--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
       <li class="footer-partners__item">
         <img src="assets/images/logo_stefanini.png" alt="Logo Stefanini">
       </li>
+      <li class="footer-partners__item">
+        <img src="assets/images/logo_taller.png" alt="Logo Taller">
+      </li>
     </ul>
   </footer>  
 </body>
