--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
   <title>Contato black november - Nyx Technology</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" href="assets/images/favicon.ico" />
   <style type="text/css">
     a {
       color: #5df4ff;
